--- a/getthegold.html
+++ b/getthegold.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Get The Gold</title>
     <link rel="icon" href="rps images/favicon.png" type="image/png">
+    <script src="https://unpkg.com/htmx.org@2.0.3" integrity="sha384-0895/pl2MU10Hqc6jd4RvrthNlDiE9U1tWmX7WRESftEDRosgxNsQG/Ze9YMRzHq" crossorigin="anonymous"></script>
     <script type="text/javascript" src="getthegold.js"></script>
     <link href="getthegold.css" rel="stylesheet" type="text/css" />
 </head>
@@ -52,7 +53,46 @@
 
                 <button onclick="reset()">reset data</button>
         </div>
+      </div>
+      <div class="flex-container">
+
+        <div class="flex-child magenta">
+          <h1><b>Rebirths</b></h1>
+
+          <button>rebirth</button>
+          <p id="rb">cost:100 onyx</p>
+          <p>1 rebith point every log10(onyx)</p>
+        </div>
         
+        <div class="flex-child green">
+            <h1><b>mastery</b></h1>
+
+            <button onclick="mastery(1)">dirt mastery</button>
+            <p id="m1">cost:10000 Dirt</p>
+
+            <button onclick="mastery(2)">copper mastery</button>
+            <p id="m2">cost:10000 copper</p>
+
+            <button onclick="mastery(3)">silver mastery</button>
+            <p id="m3">cost:10000 silver</p>
+
+            <button onclick="mastery(4)">gold mastery</button>
+            <p id="m4">cost:1000 Gold</p>
+
+            <button onclick="mastery(5)">diamond mastery</button>
+            <p id="m5">cost:1000 diamonds</p>
+
+            <button onclick="mastery(6)">ruby mastery</button>
+            <p id="m6">cost:100 ruby</p>
+
+            <button onclick="mastery(7)">emerald mastery</button>
+            <p id="m7">cost:100 Emerald</p>
+
+            <button onclick="mastery(8)">onyx mastery</button>
+            <p id="m8">cost:10 Onyx</p>
+
+
+        </div>
       </div>
 </body>
 
