--- a/index.html
+++ b/index.html
@@ -5,7 +5,13 @@
     <title>Get The Gold</title>
     <link rel="icon" href="rps images/favicon.png" type="image/png">
     <script src="https://unpkg.com/htmx.org@2.0.3" integrity="sha384-0895/pl2MU10Hqc6jd4RvrthNlDiE9U1tWmX7WRESftEDRosgxNsQG/Ze9YMRzHq" crossorigin="anonymous"></script>
-    <script type="text/javascript" src="getthegold.js"></script>
+    <script type="text/javascript" src="js/getthegold.js"></script>
+    <script type="text/javascript" src="js/data.js"></script>
+    <script type="text/javascript" src="js/mine.js"></script>
+    <script type="text/javascript" src="js/upgrade.js"></script>
+    <script type="text/javascript" src="js/setup.js"></script>
+    <script type="text/javascript" src="js/mastery.js"></script>
+    <script type="text/javascript" src="js/reset.js"></script>
     <link href="getthegold.css" rel="stylesheet" type="text/css" />
 </head>
 
@@ -39,7 +45,7 @@
                 <button onclick="buy(4)">ore base count</button>
                 <p id="buy4">cost:10 Gold</p>
 
-                <button onclick="buy(5)">reroll common chance</button>
+                <button onclick="buy(5)">slower upgrade cost increase</button>
                 <p id="buy5">cost:5 diamonds</p>
 
                 <button onclick="buy(6)">gold multiplier</button>
