--- a/index.html
+++ b/index.html
@@ -68,6 +68,24 @@
         <p id="rb">cost:100 onyx</p>
         <p>1 rebith point every log10(onyx)</p>
         <p>must have 100 onyx to reset</p>
+        <br>
+        <h1><b>REBIRTH SHOP</b></h1>
+
+        <button onclick="rbuy(1)">ore multiplier</button>
+        <p id="buy1">cost:1 rebirth point</p>
+
+        <button onclick="rbuy(2)">new ore</button>
+        <p id="buy1">cost:10 rebirth point</p>
+
+        <button onclick="rbuy(3)">unlock: farm</button>
+        <p id="buy1">cost:1000 rebirth point</p>
+
+        <button onclick="rbuy(4)">auto mine ore</button>
+        <p id="buy1">cost:10 rebirth point</p>
+
+        <button onclick="rbuy(5)">mine adjacent ores chance</button>
+        <p id="buy1">cost:100 rebirth point</p>
+        
       </div>
 
       <div id="mastery" style="display: none;">
@@ -99,8 +117,11 @@
       </div>
 
       <div id="settings" style="display: none;">
+        <h1><b>SETTINGS</b></h1>
 
         <button onclick="reset()">reset data</button>
+
+        <button>export data as json (wip)</button>
 
       </div>
 
@@ -130,8 +151,6 @@
         <p id="rp"> rebirth points: 0</p>
 
       </div>
-
-
 
     </div>
   </div>
