--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <script type="text/javascript" src="js/mastery.js"></script>
   <script type="text/javascript" src="js/reset.js"></script>
   <script type="text/javascript" src="js/rebirth.js"></script>
+  <script type="text/javascript" src="js/adjacent.js"></script>
   <link href="getthegold.css" rel="stylesheet" type="text/css" />
 </head>
 
@@ -72,19 +73,19 @@
         <h1><b>REBIRTH SHOP</b></h1>
 
         <button onclick="rbuy(1)">ore multiplier</button>
-        <p id="buy1">cost:1 rebirth point</p>
+        <p id="rbuy1">cost:1 rebirth point</p>
 
         <button onclick="rbuy(2)">new ore</button>
-        <p id="buy1">cost:10 rebirth point</p>
+        <p id="rbuy2">cost:10 rebirth point</p>
 
         <button onclick="rbuy(3)">unlock: farm</button>
-        <p id="buy1">cost:1000 rebirth point</p>
+        <p id="rbuy3">cost:1000 rebirth point</p>
 
         <button onclick="rbuy(4)">auto mine ore</button>
-        <p id="buy1">cost:10 rebirth point</p>
+        <p id="rbuy4">cost:10 rebirth point</p>
 
         <button onclick="rbuy(5)">mine adjacent ores chance</button>
-        <p id="buy1">cost:100 rebirth point</p>
+        <p id="rbuy5">cost:100 rebirth point</p>
         
       </div>
 
