few changes for usage later

--- a/index.html
+++ b/index.html
@@ -33,8 +33,10 @@
       <button onclick="swap(4)">MASTERY</button>
       <button onclick="swap(5)">SETTINGS</button>
       <button onclick="swap(6)">LEVELS</button>
+      <button onclick="page(-1)">PREV PAGE</button>
       <button onclick="swap(7)">ZONES(wip)</button>
       <button onclick="swap(8)">POWER(wip)</button>
+      <button onclick="page(1)">NEXT PAGE</button>
 
       <div id="shop" style="display: block;">
         <h1><b>SHOP</b></h1>
